--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^5.11.1",
+    "axios": "^1.6.2",
+    "classnames": "^2.3.2",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0",
-    "antd": "^5.11.0",
-    "classnames": "^2.3.2",
-    "sass": "^1.69.5",
     "react-virtualized": "^9.22.5",
-    "styled-components": "^6.1.1"
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.1",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
